fixed cotent alignments in Schedule page

--- a/style.css
+++ b/style.css
@@ -170,15 +170,15 @@ a {
     margin-bottom: 2rem;
   }
 
-.about {
+.box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 2rem;
+    margin: 1vw 2vw;
   }
 
   .daniel {
-    width: 50vw
+    width: 50vw;
     margin: 3rem;
     border-radius: 10%;
   --mask:
@@ -483,7 +483,7 @@ footer {
     margin-bottom: 2rem;
   }
 
-  .about {
+  .box {
     display: flex;
     flex-direction: column;
     align-items: center;
